# wormlife

./: .gitignore  README.md  compare_coords.py  conftest.py  mismatch_log.txt  pyproject.toml  pytest.ini  requirements.txt
src/: cli.py  engine.py  io.py  loader_check.py  lookup.py  make_gif.py  wormhole.py
srcs/: engine.py  loader_check.py  lookup.py  run_sim.py  step4_boolean.py  wormhole.py
tests/: conftest.py  quick_import_test.py  test_cli.py  test_engine.py  test_io.py  test_loader_check.py  test_lookup.py  test_run_smoke.py  test_wormhole.py  test_wormhole_io_integration.py
